[gd_scene load_steps=5 format=4 uid="uid://minion_scene"]

[ext_resource type="Script" path="res://scripts/entities/minions/MinionController.gd" id="1_script"]
[ext_resource type="Texture2D" path="res://assets/sprites/minions/shadow_crawler.png" id="2_sprite"]

[sub_resource type="CircleShape2D" id="CircleShape2D_collision"]
radius = 4.0

[sub_resource type="CircleShape2D" id="CircleShape2D_attack"]
radius = 12.0

[node name="Minion" type="CharacterBody2D"]
collision_layer = 3
script = ExtResource("1_script")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_sprite")
texture_filter = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_collision")

[node name="AttackRange" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackRange"]
shape = SubResource("CircleShape2D_attack")

[node name="AttackTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
